version bump + java to 1.8